[package]
name = "arceos-hellofs"
version = "0.1.0"
edition = "2021"
authors = ["Yuekai Jia <equation618@gmail.com>"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axruntime = { path = "../../modules/axruntime", features = ['fs']}
axfs = { path = "../../modules/axfs" }
vfscore = { path = "../../crates/vfscore" }