[package]
name = "axdriver"
version = "0.1.0"
edition = "2021"
authors = ["Yuekai Jia <equation618@gmail.com>"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
bus-mmio = ["driver_virtio?/bus-mmio"]
bus-pci = ["driver_virtio?/bus-pci"]
virtio = ["driver_virtio", "dep:axalloc", "dep:axhal"]

# various types of drivers
virtio-net = ["virtio", "driver_virtio/net"]
virtio-blk = ["virtio", "driver_virtio/block"]
# more device example: e1000 = ["driver_net/e1000"]

default = ["bus-mmio"]

[dependencies]
log = "0.4"
cfg-if = "1.0"
lazy_init = { path = "../../crates/lazy_init" }
tuple_for_each = { path = "../../crates/tuple_for_each" }
driver_common = { path = "../../crates/driver_common" }
driver_block = { path = "../../crates/driver_block" }
driver_net = { path = "../../crates/driver_net" }
driver_virtio = { path = "../../crates/driver_virtio", optional = true }
axalloc = { path = "../axalloc", optional = true }
axhal = { path = "../axhal", optional = true }
