[package]
name = "arceos-nosched"
version = "0.1.0"
edition = "2021"
authors = ["Leping Wang <xuehao14@126.com>"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
preempt = ["libax/sched_rr"]
default = ["libax/default"]

[dependencies]
libax = { path = "../../../ulib/libax", default-features = false, features = ["alloc", "paging", "multitask"] }
